 - Added show_ui_tooltip preference (BUG#1140).
   Patches: corvid
+- Make embedding into other applications more reliable (BUG#1127).
 - Add search from address bar.
   Patches: Johannes Hofmann
+- Better scaling (down) of images, even with consideration of gamma
   correction.
 - Fixed (possibly security) problem of FltkImgBuf caused by integer overflow
   (BUG#1129).
 - Some linebreaking fixes.
 - Added white_bg_replacement preference.
   Patches: Sebastian Geerken
+- Fix a set of bugs reported by Oulu Univ. Secure Programming Group
   (HTML parsing, URL resolution, GIF processing, etc.)
 - Improved/fixed handling of HEAD, TITLE, TEXTAREA and form inputs.
 - Made show_url dillorc option work again (BUG#1128)
   Patches: Jorge Arellano Cid
+- Fix compiling on Hurd.
   Patch: Pino Toscano
+- Avoid Dpid children becoming zombies.
   Patch: Jorge Arellano, J. Gaffney
+- HTML5 WBR element.
 - Fix compiling on IRIX with MIPSpro compiler.
   Patches: corvid, Sebastian Geerken

-----------------------------------------------------------------------------

dillo-3.0.3 [April 17, 2013]

+- Support for CSS display property
 - Replace polling in DNS with a pipe.
 - Packed trie to optimize hyphenator memory consumption.
 - Fix crash in datauri dpi.
 - Speed up DNS requests when ipv6 isn't enabled.
   Patches: Johannes Hofmann
+- Fix image input coordinates (BUG#1070)
 - When location bar is given focus, temporarily show panels if hidden
   (BUG#1093).
 - Fix bug where data URI has charset but no media type.
 - Bug meter line number fix for bare carriage returns.
 - Add some more info to various bug meter messages.
 - For text selection, fix releasing mouse button outside of boundary.
 - While selecting text, moving cursor outside viewport will scroll it.
 - Make form resetting work for <select>.
 - Never leave location bar empty when requesting page (BUG#1113).
 - Some improvements to tab navigation of form widgets (includes BUG#1111).